--- a/playground/playground.css
+++ b/playground/playground.css
@@ -44,3 +44,12 @@ a {
     font-family: monospace;
     font-size: 10pt;
 }
+
+#projectId {
+    width: 400px;
+    height: 360px;
+    background: rgb(36,36,36);
+    color: rgb(217,217,217);
+    font-family: monospace;
+    font-size: 10pt;
+}
