Added CSS For Drop Down Menus

--- a/playground/playground.css
+++ b/playground/playground.css
@@ -74,3 +74,16 @@ li a {
 li a:hover {
     background-color: #111;
 }
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 100%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
